# ryva

./: README.md  README.rd  adquirir.sh  raspberry_pi_b.md
IMU/: qmc5883l.txt
brujula_sdl_pc/: LEAME  Makefile  README-distancia.txt  bru.c
caja_adquisidora/: README.md
caja_adquisidora/IMU/: CALIBRAR_MAGNETOMETRO.txt  LEAME.txt  imu.py  leame_acelerometro.txt  leame_giroscopo.txt  leame_magnetometro.txt  magnetometro.py  test2.py
caja_adquisidora/cam_udp_streaming/: README.md
caja_adquisidora/cam_udp_streaming/udp-image-streaming/: CMakeCache.txt  CMakeLists.txt  PracticalSocket.h  cmake_install.cmake
caja_adquisidora/gps_time/: gps_time.c  obtener-lat-long-real-time.sh  procesar_gps.sh
caja_adquisidora/lidar-servo/: Makefile  README.md  lidar-lite.c  lidar-lite.h  lidar_servo_leer.c  main.c  serial.c  serial.h  timer.c  timer.h  twi.c
caja_adquisidora/old_cam/: cap.sh
caja_adquisidora/websocket/: server.py  server2.py  web.html
cam_udp_streaming/: README.md  cap.sh
gps_time/: Makefile  README  gps_time.c  vel.c
lidar_nuevo/: lidar-sweep.c  lidar.c
lidar_sdl_pc/: Makefile  README  lidar_sdl.c
magnetometro_sdl_pc/: LEAME.txt  Makefile  README  mag_sdl.c  mag_sdl_final.c  magnetometro.txt  run.sh
navegacion_inercial/: Makefile  display.c  gps.cpp  imu-quieta.txt  magn.cpp  magn.h  magnetometro.txt  main.c  matrix.c  matrix.h  nav_utils.c  nav_utils.h  tray2.txt
orb_slam2/: plot_trayectorias.gp  plot_trayectorias.md
procesar_datos/: gps_data.txt  graf1.plot  graf2.plot  graf3.plot  graficar.sh  graficar_gps.sh  graficar_trayectoria_imu.plot
(+211 files in other folders)
